DevTools: do not set visible size while emulating in case of device mode.

Bug: 742990
Change-Id: Ibe303f5e0f5a94015adad2b0d90de963b25d61fb